# SubmitReady

./: .env.example  .gitignore  .gitlab-ci.yml  AGENT_LOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  REFLECTION.md  SPEC.md  SPEC_PROCESS.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py  models.py
backend/app/checks/: __init__.py  engine.py  secrets.py
backend/app/core/: redaction.py
backend/app/runners/: __init__.py  controlled.py  docker.py
backend/app/schemas/: report.py  rules.py
backend/app/services/: check_service.py  explanation.py  extractor.py  reports.py  rules.py
backend/tests/: test_backend.py
docker/: backend.Dockerfile  frontend.Dockerfile  nginx-standalone.conf  nginx.conf  start-all.sh
docs/: ACCEPTANCE.md  AGENT_LOG.md  API.md  ARCHITECTURE.md  COLD_START_REPORT.md  DEMO.md  DEPENDENCIES.md  PLAN.md  PR_HISTORY.md  REFLECTION.md  REQUIREMENTS_TRACEABILITY.md  SECURITY.md  SPEC.md  SPEC_PROCESS.md  TROUBLESHOOTING.md
examples/: README.md
examples/projects/c-compile-error/: main.c
examples/projects/cpp-pass/: main.cpp
examples/rules/: c-course-v1.yaml  cpp-course-v1.yaml  python-course-v1.yaml
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  main.tsx  styles.css  types.ts
scripts/: demo.ps1  demo.py  generate_examples.py  security_scan.py  test-all.ps1  test_all.py
(+18 files in other folders)
