[project]
name = "submitready-backend"
version = "0.1.0"
description = "Deterministic pre-submission checker API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.5,<3",
  "python-multipart>=0.0.12,<1",
  "PyYAML>=6,<7",
  "SQLAlchemy>=2,<3",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = ["httpx>=0.27,<1", "mypy>=1.11,<2", "pytest>=8,<9", "ruff>=0.7,<1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["tests"]

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true
